# opencarbon-atlas

./: .gitignore  PROJECT.md  README.md  pyproject.toml
api/: __init__.py  carbon_api.py  database.py  schemas.py
data/norway/: capture_status.csv  data_quality.csv  emissions.csv  energy.csv  locations.csv  locations.geojson  logistics.csv  plants.csv  point_sources.csv  products.csv  references.csv
docs/: contribution.md  data_sources.md  methodology.md  roadmap.md  schema.md
scripts/: build_geojson.py  seed_sample_data.py  validate_data.py
tests/: test_api.py  test_validation.py
web/dashboard/: dashboard.js  index.html  style.css
web/map_viewer/: index.html  map.js  style.css
